deployment/manual/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /ctms-api/*
        backend:
          serviceName: ctms-api
          servicePort: 8080
      - path: /ufs-api/*
        backend:
          serviceName: ufs-api
          servicePort: 8081
